--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
         const IconBook = () => (
             <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#2563eb" strokeWidth="1.5" strokeLinecap="round" strokeLinejoin="round"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/></svg>
         );
+        const IconQA = () => (
+            <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" viewBox="0 0 24 24" fill="none" stroke="#f59e0b" strokeWidth="1.5" strokeLinecap="round" strokeLinejoin="round"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><line x1="12" y1="17" x2="12.01" y2="17"/></svg>
+        );
         const IconShield = () => (
             <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#2563eb" strokeWidth="1.5" strokeLinecap="round" strokeLinejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/></svg>
         );
@@ -1356,7 +1359,9 @@
                 layout: 'section',
                 tag: "",
                 title: "Q&A",
-                subtitle: "歡迎提問"
+                subtitle: "歡迎提問",
+                slidoUrl: "https://app.sli.do/event/v5E2ZdcCzhE9FHG2EfHh7z",
+                slidoCode: "web3"
             },
             {
                 id: 76,
@@ -1454,10 +1459,21 @@
                         return (
                             <div className="flex flex-col items-center justify-center h-full text-center px-6">
                                 <div className="mb-6 md:mb-8 text-amber-400">
-                                    <IconBitcoin />
+                                    {slide.slidoUrl ? <IconQA /> : <IconBitcoin />}
                                 </div>
                                 <h2 className="text-4xl md:text-6xl font-bold text-white mb-4 md:mb-6 tracking-tight">{slide.title}</h2>
-                                <p className="text-xl md:text-2xl text-slate-300 font-medium max-w-2xl">{slide.subtitle}</p>
+                                {slide.subtitle && <p className="text-xl md:text-2xl text-slate-300 font-medium max-w-2xl mb-6 md:mb-8">{slide.subtitle}</p>}
+                                {slide.slidoUrl && (
+                                    <div className="flex flex-col sm:flex-row items-center justify-center gap-6 md:gap-10 mt-2">
+                                        <a href={slide.slidoUrl} target="_blank" rel="noopener noreferrer" className="inline-flex items-center gap-2 px-6 py-3 bg-indigo-600 hover:bg-indigo-500 text-white font-bold rounded-full shadow-lg transition-all hover:scale-105">
+                                            即時提問 →
+                                        </a>
+                                        <div className="flex flex-col items-center">
+                                            <img src={`https://api.qrserver.com/v1/create-qr-code/?size=160x160&data=${encodeURIComponent(slide.slidoUrl)}`} alt="即時提問 QR Code" className="w-40 h-40 rounded-xl bg-white p-2 border-2 border-slate-600 shadow-lg" />
+                                            {slide.slidoCode && <p className="text-slate-400 text-sm mt-2 font-medium">活動代碼 {slide.slidoCode}</p>}
+                                        </div>
+                                    </div>
+                                )}
                             </div>
                         );
                     case 'break':
